--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -12,6 +12,15 @@
 <div class="container">
     <h2>Login</h2>
 
+        {% comment %} django messages  {% endcomment %}
+        {% if messages %}
+        <ul class="messages" id="message_class">
+            {% for message in messages %}
+                <li class="{{ message.tags }}">{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+
     <!-- Display non-field errors -->
     {% if form.non_field_errors %}
         <div class="errors">
@@ -23,7 +32,6 @@
 
     <form method="post">
         {% csrf_token %}
-        
         <div class="form-group">
             <label for="email">Email:</label>
             {{ form.email }}
@@ -52,6 +60,6 @@
 
     <p style="text-align:center; margin-top:20px;">Don't have an account? <a href="{% url 'signup' %}">Signup here</a></p>
 </div>
-
+<script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
