--- a/authentication/templates/signup.html
+++ b/authentication/templates/signup.html
@@ -11,6 +11,14 @@
 
 <div class="container">
     <h2>Signup</h2>
+        {% comment %} django messages  {% endcomment %}
+        {% if messages %}
+        <ul class="messages" id="message_class">
+            {% for message in messages %}
+                <li class="{{ message.tags }}">{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
 
     <!-- Display non-field errors -->
     {% if form.non_field_errors %}
@@ -23,7 +31,6 @@
 
     <form method="post">
         {% csrf_token %}
-        
         <div class="form-group">
             <label for="email">Email:</label>
             {{ form.email }}
@@ -65,6 +72,6 @@
 
     <p style="text-align:center; margin-top:20px;">Already have an account? <a href="{% url 'login' %}">Login here</a></p>
 </div>
-
+<script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
