--- a/user_prompt/templates/dashboard.html
+++ b/user_prompt/templates/dashboard.html
@@ -34,7 +34,7 @@
         </header>
         <main>
             <section class="new-prompt">
-                <button id="new-prompt-btn"><a href="{% url "ask_ai" %}"> Create New Prompt</a></button>
+                <button id="new-prompt-btn"><a href="{% url "new_prompt" %}"> Create New Prompt</a></button>
             </section>
             <section class="history">
                 <p><b>Prompt History</b></p>
