--- a/user_prompt/templates/writing_style.html
+++ b/user_prompt/templates/writing_style.html
@@ -8,18 +8,27 @@
     <link rel="stylesheet" href="{% static 'css/user_style.css' %}">
 </head>
 <body>
+    {% if messages %}
+    <ul class="messages" id="message_class">
+        {% for message in messages %}
+            <li class="{{ message.tags }}">{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
     <div class="pt-container">
-        <h2>Writing Style</h2>
+        <h2><label for="id_writing_style">Writing Style</label></h2>
         <form class="p-form">
-            <textarea placeholder="Set your writing style."></textarea>
+            <textarea name="writing_style" id="id_writing_style" placeholder="Set your writing style."></textarea>
             <button type="submit">Next</button>
         </form>
     </div>
 
     <!-- hint conatainer  -->
-     <div class="hint-container">
+    <div class="hint-container">
         <h3>Hint</h3>
-        <p>jddhdhdhdhdhdhdhdnnchhdhdhncnhdhdhhdhdhdhdhdhdnnchhdhdhncnhdhdhhdhdhdhdhdhdnnchhdhdhncnhdhdhhdhdhdhdhdhdnnchhdhdhncnhdhdhdkkdkdkdkdnnddh</p>
+        {% for h in hint %}
+        <p> {{h.writing_style|linebreaks}} </p>
+        {% endfor %}
      </div>
 
      <script src="{% static 'js/user_script.js' %}"></script>
