--- a/user_prompt/templates/context.html
+++ b/user_prompt/templates/context.html
@@ -17,7 +17,7 @@
     {% endif %}
     <div class="pt-container">
         <h2><label for="id_context">Context</label></h2>
-        <form class="p-form">
+        <form class="p-form" method="post" id="context">
             <textarea name="context" id="id_context" placeholder="Set your context."></textarea>
             <button type="submit">Next</button>
         </form>
