--- a/user_prompt/templates/examples.html
+++ b/user_prompt/templates/examples.html
@@ -17,7 +17,7 @@
     {% endif %}
     <div class="pt-container">
         <h2><label for="id_examples">Examples</label></h2>
-        <form class="p-form">
+        <form class="p-form" method="post" id="examples">
             <textarea name="examples" id="id-examples" placeholder="Set examples."></textarea>
             <button type="submit">Next</button>
         </form>
