--- a/user_prompt/templates/keywords.html
+++ b/user_prompt/templates/keywords.html
@@ -17,7 +17,7 @@
     {% endif %}
     <div class="pt-container">
         <h2><label for="id_keywords">Keywords</label></h2>
-        <form class="p-form">
+        <form class="p-form" method="post" id="keywords">
             <textarea name="keywords" id="id_keywords" placeholder="Set your keywords."></textarea>
             <button type="submit">Next</button>
         </form>
