--- a/user_prompt/templates/restrictions.html
+++ b/user_prompt/templates/restrictions.html
@@ -17,7 +17,7 @@
     {% endif %}
     <div class="pt-container">
         <h2><label for="id_restrictions">Restrictions</label></h2>
-        <form class="p-form">
+        <form class="p-form" method="post" id="restrictions">
             <textarea name="restrictions" id="id_restrictions" placeholder="Set your restrictions."></textarea>
             <button type="submit">Next</button>
         </form>
