--- a/user_prompt/templates/role.html
+++ b/user_prompt/templates/role.html
@@ -17,7 +17,7 @@
     {% endif %}
     <div class="pt-container">
         <h2><label for="id_role">Role</label></h2>
-        <form class="p-form">
+        <form class="p-form" method="post" id="role">
             <textarea  name="role" id="id_role" placeholder="Set AI role."></textarea>
             <button type="submit">Next</button>
         </form>
