--- a/user_prompt/templates/title.html
+++ b/user_prompt/templates/title.html
@@ -18,7 +18,7 @@
     <div class="p-container">
         <h2><label for="id_title">Title</label></h2>
         <span>Give your prompt a title.</span>
-        <form class="p-form">
+        <form class="p-form" method="post" id="title">
             <input type="text" name="title" id="id_title" required>
             <button type="submit">Next</button>
         </form>
