--- a/user_prompt/templates/tone.html
+++ b/user_prompt/templates/tone.html
@@ -17,7 +17,7 @@
     {% endif %}
     <div class="pt-container">
         <h2><label for="id_tone">Tone</label></h2>
-        <form class="p-form">
+        <form class="p-form" method="post" id="tone">
             <textarea name="tone" id="id_tone" placeholder="Set your writing tone."></textarea>
             <button type="submit">Next</button>
         </form>
