--- a/user_prompt/templates/writing_style.html
+++ b/user_prompt/templates/writing_style.html
@@ -17,7 +17,7 @@
     {% endif %}
     <div class="pt-container">
         <h2><label for="id_writing_style">Writing Style</label></h2>
-        <form class="p-form">
+        <form class="p-form" method="post" id="writingStyle">
             <textarea name="writing_style" id="id_writing_style" placeholder="Set your writing style."></textarea>
             <button type="submit">Next</button>
         </form>
