--- a/user_prompt/templates/audience.html
+++ b/user_prompt/templates/audience.html
@@ -17,7 +17,7 @@
     {% endif %}
     <div class="pt-container">
         <h2><label for="id_audience">Audience</label></h2>
-        <form class="p-form">
+        <form class="p-form" method="post" id="audience">
             <textarea name="audience" id="id_audience" placeholder="Set your audience."></textarea>
             <button type="submit">Next</button>
         </form>
