--- a/user_prompt/templates/format_result.html
+++ b/user_prompt/templates/format_result.html
@@ -17,7 +17,7 @@
     {% endif %}
     <div class="pt-container">
         <h2><label for="id_format_result">Format Result</label></h2>
-        <form class="p-form">
+        <form class="p-form" method="post" id="formatResult">
             <textarea name="format_result" id="id_format_result" placeholder="Set result format."></textarea>
             <button type="submit">Next</button>
         </form>
