--- a/user_prompt/templates/goal.html
+++ b/user_prompt/templates/goal.html
@@ -17,7 +17,7 @@
     {% endif %}
     <div class="pt-container">
         <h2><label for="id_goal">Goal</label></h2>
-        <form class="p-form">
+        <form class="p-form" method="post" id="goal">
             <textarea name="goal" id="id_goal" placeholder="Set your goal."></textarea>
             <button type="submit">Next</button>
         </form>
