--- a/user_prompt/templates/examples.html
+++ b/user_prompt/templates/examples.html
@@ -30,7 +30,7 @@
         <div class="form-container">
             <form class="p-form" method="post" id="examples">
                 {% csrf_token %}
-                <textarea name="examples" id="id-examples" placeholder="Set examples."></textarea>
+                <textarea name="examples" id="id_examples" placeholder="Set examples."></textarea>
                 <button type="submit">Next</button>
             </form>
             <div class="prompt-update">
